# FasterTransformer

./: .gitignore
examples/cpp/: CMakeLists.txt
examples/cpp/gptj/: F350_config2.ini
examples/cpp/gptjX/: CMakeLists.txt  F350_config2.ini  gptj_example.cc
examples/cpp/gptj_int8/: CMakeLists.txt  F350_conf.ini  gptj_int8_example.cc
src/fastertransformer/kernels/: bfloat16_fallback_kenrels.cuh
src/fastertransformer/layers/: DenseWeight.h
src/fastertransformer/layers/attention_layers/: DecoderSelfAttentionLayer.cc
src/fastertransformer/layers/attention_layers_int8/: TensorParallelDecoderSelfAttentionLayerINT8.h
src/fastertransformer/models/gptj_int8/: CMakeLists.txt  GptJContextDecoderINT8.cc  GptJContextDecoderINT8.h  GptJDecoderINT8.cc  GptJDecoderINT8.h  GptJDecoderLayerWeightINT8.cc  GptJDecoderLayerWeightINT8.h  GptJINT8.cc  GptJINT8.h  GptJWeightINT8.cc  GptJWeightINT8.h
src/fastertransformer/utils/: CMakeLists.txt  memory_utils.cu  memory_utils.h  nvtx_utils.h
